--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@
             </section>
         </div>
     </main>
+    <script>
 
     <script src="vendor/math.min.js"></script> 
     <script src="vendor/leaflet.js"></script> 
@@ -464,6 +465,7 @@
 
     <script src="lib/astro.js"></script>
     <script src="js/gnss-dashboard-full.js"></script>
-
+    
+<script>
 </body>
 </html>
