--- a/index.html
+++ b/index.html
@@ -462,24 +462,19 @@
     <script src="vendor/leaflet.js"></script> 
     
     <script src="lib/ukf-lib.js"></script> 
-    <script src="lib/astro.js"></script>
+    <script src="lib/ephem.js"></script> <script src="lib/astro.js"></script>
     <script src="gnss-dashboard-full.js"></script>
 
     <script>
         window.addEventListener('load', function() {
-            console.log("Système : Vérification des moteurs...");
-            
-            // Vérification du moteur UKF
-            if (typeof window.ProfessionalUKF === 'undefined') {
-                console.error("❌ Erreur : ukf-lib.js n'est pas chargé correctement.");
-                const status = document.getElementById('gps-status');
-                if(status) {
-                    status.textContent = "ERREUR MOTEUR";
-                    status.style.color = "red";
+            if (typeof window.ProfessionalUKF !== 'undefined') {
+                if(!window.MainEngine) {
+                    window.MainEngine = new ProfessionalUKF();
+                    // On injecte les coordonnées de votre capture (Marseille) par défaut
+                    window.MainEngine.lat = 43.2845557;
+                    window.MainEngine.lon = 5.3587365;
                 }
-            } else {
-                console.log("✅ Moteur UKF détecté.");
-                // Le fichier gnss-dashboard-full.js prend le relais ici
+                document.getElementById('gps-status').textContent = "SYSTÈME PRÊT";
             }
         });
     </script>
