--- a/index.html
+++ b/index.html
@@ -20,14 +20,38 @@
             background-color: var(--bg-dark); color: var(--text-dark); 
             transition: background-color 0.3s, color 0.3s; 
         }
-        .dashboard-container { 
-            display: grid; 
-            grid-template-columns: 1fr 1.5fr 1fr; 
-            gap: 15px; padding: 15px; max-width: 1800px; margin: auto;
-        }
-        
-        @media (max-width: 1200px) { .dashboard-container { grid-template-columns: 1fr 1fr; } }
-        @media (max-width: 800px) { .dashboard-container { grid-template-columns: 1fr; } }
+        /* --- FIX STRUCTURE COLONNES --- */
+.dashboard-container { 
+    display: grid; 
+    grid-template-columns: 1fr 1.5fr 1fr; /* Trois colonnes fixes */
+    gap: 15px; 
+    padding: 15px; 
+    max-width: 100vw; 
+    margin: auto;
+    box-sizing: border-box;
+    align-items: start; /* Empêche l'étirement qui fait disparaître les boutons */
+}
+
+/* Force l'affichage des colonnes même si le JS plante */
+.sidebar, .main-content {
+    min-width: 0; 
+    overflow: hidden;
+    background: rgba(30, 30, 30, 0.9);
+    border: 1px solid var(--border-dark);
+    padding: 10px;
+    border-radius: 8px;
+}
+
+/* Style des boutons pour éviter les clics fantômes */
+button, .status-indicator {
+    cursor: pointer !important;
+    pointer-events: auto !important;
+    z-index: 100;
+}
+
+@media (max-width: 1200px) {
+    .dashboard-container { grid-template-columns: 1fr; } /* Mobile friendly */
+}
 
         body.dark-mode section.panel { background-color: var(--panel-dark); box-shadow: 0 4px 8px rgba(0,0,0,0.4); }
         body.dark-mode section.panel h2 { border-bottom-color: var(--border-dark); color: #4da6ff; }
