--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
                 <h2 id="controls-heading"><i class="fas fa-cog"></i> Contrôles & Système</h2>
                 <div class="data-point"><span>Heure Locale (NTP)</span><span id="local-time">N/A</span></div>
                 <div class="data-point"><span>Date & Heure (UTC/GMT)</span><span id="utc-datetime">N/A</span></div>
-                <div class="data-point"><span>Décalage Heure NTP</span><span id="ntp-offset">N/A</span></div> 
+                <div class="data-point"><span>Décalage Heure NTP</span><span id="ntp-offset">N/A</span></div>
+                <div class="data-point"><span>Heure UTC Synchro</span><span id="gmt-time-display">--:--:--</span></div>
+                <div class="data-point"><span>Précision Synchro</span><span id="clock-accuracy">0ms</span></div>
                 
                 <div class="data-point"><span>Temps écoulé (Session)</span><span id="elapsed-time">0.00 s</span></div>
                 <div class="data-point"><span>Temps de Mouvement</span><span id="movement-time">0.00 s</span></div>
@@ -255,13 +257,14 @@
                 <div class="data-point"><span>Vitesse Max (Session)</span><span id="speed-max-session">0.0 km/h</span></div> 
                 <div class="data-point"><span>Vitesse Moyenne (Mvt)</span><span id="speed-avg-moving">0.0 km/h</span></div>
                 <div class="data-point"><span>Vitesse Moyenne (Totale)</span><span id="speed-avg-total">0.0 km/h</span></div>
+                <div class="data-point"><span>Vitesse Verticale</span><span id="vel-z">0.00 m/s</span></div>    
                 <hr>
                 <h3>Physique & Relativité</h3>
                 <div class="data-point"><span>Vitesse du Son Locale (Cor.)</span><span id="local-speed-of-sound">N/A</span></div>
                 <div class="data-point"><span>% Vitesse du Son</span><span id="perc-speed-sound">0.00 %</span></div>
-                <div class="data-point"><span>Nombre de Mach</span><span id="mach-number">0.0000</span></div>
+                <div class="data-point"><span>Nombre de Mach</span><span id="mach-number">0.000</span></div>
                 <div class="data-point"><span>% Vitesse Lumière (c)</span><span id="pct-speed-of-light">0.00 %</span></div>
-                <div class="data-point"><span>Facteur de Lorentz (γ)</span><span id="lorentz-factor">1.00000000</span></div>
+                <div class="data-point"><span>Facteur de Lorentz</span><span id="lorentz-factor">1.000</span></div>
                 <div class="data-point"><span>Dilatation du Temps</span><span id="time-dilation-vitesse">0.00 ns/j</span></div>
                 <div class="data-point"><span>Temps Dilation (Gravité)</span><span id="time-dilation-gravite">0.00 ns/j</span></div>
                 <div class="data-point"><span>Énergie Relativiste (E)</span><span id="relativistic-energy">N/A</span></div>
@@ -273,7 +276,7 @@
                 
                 <hr>
                 <h3>Distance (3D)</h3>
-                <div class="data-point"><span>Distance Totale (3D)</span><span id="total-distance">0.000 km</span></div>
+                <div class="data-point"><span>Distance Totale 3D</span><span id="total-distance-3d">0.00 km</span></div>
                 <div class="data-point"><span>Distance 3D Précise (UKF)</span><span id="total-distance-3d">0.0000 km</span></div>
                 <div class="data-point"><span>Rapport de Distance (Alt/Nether)</span><span id="distance-ratio">1.000</span></div>
                 <span id="nether-mode-status" style="display:none;">1.000</span>
@@ -308,7 +311,7 @@
                 <div class="data-point"><span>Température Air</span><span id="air-temp-c">N/A</span></div>
                 <div class="data-point"><span>Pression Atmosphérique</span><span id="pressure-hpa">N/A</span></div>
                 <div class="data-point"><span>Humidité Relative</span><span id="humidity-perc">N/A</span></div>
-                <div class="data-point"><span>Densité de l'air (ρ)</span><span id="air-density">N/A</span></div>
+                <div class="data-point"><span>Densité de l'air</span><span id="air-density">1.225 kg/m³</span></div>
                 <div class="data-point"><span>Point de Rosée</span><span id="dew-point">N/A</span></div>
                 <hr>
                 <h3>Bio/SVT </h3>
@@ -337,7 +340,8 @@
                 <div class="data-point"><span>Accel. Verticale (IMU)</span><span id="accel-verticale-imu">N/A</span></div>
                 <div class="data-point"><span>Force G (Verticale)</span><span id="force-g-vert">N/A</span></div>
                 <div class="data-point"><span>Vitesse Angulaire (Gyro)</span><span id="angular-speed">N/A</span></div>
-                <div class="data-point"><span>Coeff. Balistique (Inertie)</span><span id="ballistic-coeff">N/A</span>    
+                <div class="data-point"><span>Coeff. Balistique (Inertie)</span><span id="ballistic-coeff">N/A</span>
+                <div class="data-point"><span>Force de Traînée</span><span id="drag-force">0 N</span></div>    
                 <hr>
                 <h3>Mécanique des Fluides</h3>
                 <div class="data-point"><span>Pression Dynamique (q)</span><span id="dynamic-pressure">0.00 Pa</span></div>
