--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <div class="data-point"><span>% Vitesse du Son</span><span id="perc-speed-sound">0.00 %</span></div>
                 <div class="data-point"><span>Nombre de Mach</span><span id="mach-number">0.0000</span></div>
                 <div class="data-point"><span>% Vitesse Lumière (c)</span><span id="pct-speed-of-light">0.00 %</span></div>
-                <div class="data-point"><span>Facteur de Lorentz</span><span id="lorentz-factor">1.00000000</span></div>
+                <div class="data-point"><span>Facteur de Lorentz</span> <span id="lorentz-factor">1.00000000</span>
                 <div class="data-point"><span>Dilatation du Temps</span><span id="time-dilation-vitesse">0.00 ns/j</span></div>
                 <div class="data-point"><span>Dilatation Temps</span> <span id="time-dilation">0.00 ns/s</span></div>    
                 <div class="data-point"><span>Temps Dilation (Gravité)</span><span id="time-dilation-gravite">0.00 ns/j</span></div>
@@ -403,8 +403,6 @@
                 <div class="data-point"><span>Force G (Verticale)</span><span id="force-g-vert">N/A</span></div>
                 <div class="data-point"><span>Vitesse Angulaire (Gyro)</span><span id="angular-speed">N/A</span></div>
                 <div class="data-point"><span>Coeff. Balistique (Inertie)</span><span id="ballistic-coeff">N/A</span>
-                <div class="data-point"><span>Force de Traînée</span><span id="drag-force">0.00 N</span></div>
-                <div class="data-point"><span>Pression Dyn. (q)</span> <span id="dyn-pressure">0.00 Pa</span></div>    
                 <hr>
                 <h3>Mécanique des Fluides</h3>
                 <div class="data-point"><span>Pression Dynamique (q)</span><span id="dynamic-pressure">0.00 Pa</span></div>
@@ -432,7 +430,7 @@
                 </div>
                 <div class="data-point"><span>Statut GPS</span><span id="gps-status">N/A</span></div>
                 <div class="data-point"><span>Statut EKF (Fusion)</span><span id="ukf-status">N/A</span></div>
-                <div class="data-point"><span>Statut Filtre (EKF)</span> <span id="filter-status">Initialisation...</span></div>
+                <div class="data-point"><span id="filter-status" class="status-wait">Initialisation...</span>
                 <div class="data-point"><span>Incertitude Vitesse (P)</span><span id="ukf-velocity-uncertainty">N/A</span></div> 
                 <div class="data-point"><span>Incertitude Alt. (σ)</span><span id="ukf-alt-uncertainty">N/A</span></div> 
                 <div class="data-point"><span>Bruit Mesure Vitesse (R)</span><span id="ukf-r-noise">N/A</span></div>
@@ -449,7 +447,7 @@
                     <div class="crosshair-v"></div>
                     <div class="spirit-level-bubble" id="bubble" style="transform: translate(0px, 0px);"></div>
                 </div>
-                <div class="data-point">
+                <div cla ss="data-point">
                     <span>Inclinaison (Pitch)</span>
                     <span id="pitch">0.0°</span> </div>
                 <div class="data-point">
@@ -500,7 +498,6 @@
                 <div class="data-point"><span>Altitude (Lune)</span><span id="moon-alt">N/A</span></div>
                 <div class="data-point"><span>Azimut (Lune)</span><span id="moon-azimuth">N/A</span></div>
                 <div class="data-point"><span>Lever/Coucher Lune</span><span id="moon-times">N/A</span></div>
-                <div class="data-point"><span>Distance à la Terre</span><span id="moon-distance">N/A</span></div>
                 <div class="data-point"><span>Distance Lune</span> <span id="moon-distance">N/A</span></div>  
              </section>
         </main>
