--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ hr {
                 <div class="data-point"><span>% Vitesse du Son</span><span id="perc-speed-sound">0.00 %</span></div>
                 <div class="data-point"><span>Nombre de Mach</span><span id="mach-number">0.0000</span></div>
                 <div class="data-point"><span>% Vitesse Lumière (c)</span><span id="pct-speed-of-light">0.00 %</span></div>
-                <div class="data-point"><span>Facteur de Lorentz</span> <span id="lorentz-factor">1.00000000</span>
+                <div class="data-point"><span>Facteur de Lorentz</span><span id="lorentz-factor">1.00000000</span></div>
                 <div class="data-point"><span>Dilatation du Temps</span><span id="time-dilation-vitesse">0.00 ns/j</span></div>
                 <div class="data-point"><span>Dilatation Temps</span> <span id="time-dilation">0.00 ns/s</span></div>    
                 <div class="data-point"><span>Temps Dilation (Gravité)</span><span id="time-dilation-gravite">0.00 ns/j</span></div>
