--- a/index.html
+++ b/index.html
@@ -9,136 +9,84 @@
     <link rel="stylesheet" href="leaflet.css" />
     <link rel="stylesheet" href="fontawesome.min.css" />
           
-<style>
+<style> 
+    /* --- GNSS DASHBOARD OPTIMISÉ --- */
+
 :root {
     --bg-dark: #07070a;
     --panel-dark: #12121a;
     --border: #252533;
-    --col-1: #00d2ff; /* Bleu : Système */
-    --col-2: #00ff88; /* Vert : Vitesse */
-    --col-3: #ff00ff; /* Magenta : Physique */
-    --col-4: #ffcc00; /* Or : Astro */
+    --accent: #00a2ff;
 }
 
-body.dark-mode { 
-    font-family: 'Segoe UI', sans-serif; 
-    margin: 0; background: var(--bg-dark); color: #fff;
+body {
+    margin: 0;
+    padding: 0;
+    background: var(--bg-dark);
+    /* Supprime les espaces vides sur les bords */
+    width: 100%;
     overflow-x: hidden;
 }
 
-/* --- LE HEADER --- */
-header h1 {
-    font-size: 1.1rem;
-    padding: 10px;
-    background: rgba(0,0,0,0.5);
-    margin: 0;
-}
-
-/* --- GRILLE 4 COLONNES --- */
+/* Grille ultra-serrée pour maximiser l'espace */
 .dashboard-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 colonnes PC */
-    gap: 8px;
-    padding: 8px;
+    grid-template-columns: repeat(4, 1fr); 
+    gap: 6px; /* Espace minimal entre colonnes */
+    padding: 5px; /* Marge minimale avec le bord de l'écran */
     box-sizing: border-box;
+    width: 100vw;
 }
 
-/* --- ADAPTATION MOBILE (Visible & Sans bug) --- */
+/* Fix pour la carte et le globe */
+#map, #globe-container {
+    width: 100%;
+    height: 160px; /* Hauteur réduite pour éviter de descendre trop bas */
+    border-radius: 4px;
+    margin: 5px 0;
+    background: #000;
+}
+
+/* Adaptation Mobile 4 colonnes sans espace vide */
 @media (max-width: 900px) {
     .dashboard-container {
-        grid-template-columns: repeat(4, 1fr); /* Force 4 colonnes sur Mobile */
+        grid-template-columns: repeat(4, 1fr);
         gap: 3px;
-        padding: 4px;
-        height: auto;
+        padding: 2px;
     }
 
     section.panel {
-        padding: 5px 2px !important;
-        min-width: 0; /* Empêche le débordement */
+        padding: 4px 2px !important;
     }
 
-    /* Texte ultra-compact pour mobile */
     .data-point {
-        flex-direction: column !important; /* Libellé au dessus de la valeur */
+        font-size: 0.58rem !important;
+        flex-direction: column;
+        align-items: center;
         text-align: center;
-        padding: 4px 0 !important;
-        font-size: 0.55rem !important; 
     }
 
-    h2 { font-size: 0.5rem !important; margin: 5px 0 !important; }
-    h3 { font-size: 0.45rem !important; }
-    
-    .data-point span:first-child {
-        color: #999;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        width: 100%;
+    /* Empêche le titre de prendre trop de place */
+    h2 {
+        font-size: 0.5rem !important;
+        margin: 4px 0 !important;
+        padding-bottom: 2px !important;
     }
 }
 
-/* --- COULEURS DES COLONNES --- */
-/* Colonne 1 : SYSTÈME */
-.panel:nth-child(1) { border-top: 3px solid var(--col-1); }
-.panel:nth-child(1) span[id] { color: var(--col-1); }
-
-/* Colonne 2 : VITESSE */
-.panel:nth-child(2) { border-top: 3px solid var(--col-2); }
-.panel:nth-child(2) span[id] { color: var(--col-2); }
-
-/* Colonne 3 : PHYSIQUE */
-.panel:nth-child(3) { border-top: 3px solid var(--col-3); }
-.panel:nth-child(3) span[id] { color: var(--col-3); }
-
-/* Colonne 4 : ASTRO */
-.panel:nth-child(4) { border-top: 3px solid var(--col-4); }
-.panel:nth-child(4) span[id] { color: var(--col-4); }
-
-/* --- STYLE DES ÉLÉMENTS --- */
+/* Style des panneaux */
 section.panel {
     background: var(--panel-dark);
     border: 1px solid var(--border);
-    border-radius: 5px;
+    border-radius: 4px;
     overflow: hidden;
 }
 
-.data-point {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid rgba(255,255,255,0.03);
-}
-
-.data-point span[id] {
-    font-family: 'Courier New', monospace;
-    font-weight: bold;
-}
-
-.speed-display {
-    background: #000;
-    padding: 10px 0;
-    margin: 5px 0;
-}
-#speed-main-display { font-size: 1.8rem; font-weight: 900; }
-    navigator.geolocation.watchPosition(p => {
-    const lat = p.coords.latitude;
-    const lon = p.coords.longitude;
-
-    if(window.MainEngine) {
-        window.MainEngine.lat = lat;
-        window.MainEngine.lon = lon;
-    }
-
-    // Mise à jour de la carte en temps réel
-    if (map) {
-        map.setView([lat, lon], map.getZoom());
-        // Optionnel : ajouter un marqueur
-        if (!window.userMarker) {
-            window.userMarker = L.marker([lat, lon]).addTo(map);
-        } else {
-            window.userMarker.setLatLng([lat, lon]);
-        }
-    }
-}, null, {enableHighAccuracy:true});
+/* Couleurs par colonne */
+.column-1 { border-top: 2px solid #00d2ff; }
+.column-2 { border-top: 2px solid #00ff88; }
+.column-3 { border-top: 2px solid #ff00ff; }
+.column-4 { border-top: 2px solid #ffcc00; }
 </style>
 </head>
 <body class="dark-mode"> 
