--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="leaflet.css" />
     <link rel="stylesheet" href="fontawesome.min.css" />
+    <link rel="manifest" href="manifest.json">
           
 <style> 
 /* --- GNSS SPACETIME DASHBOARD • FINAL MASTER STYLE --- */
@@ -493,6 +494,8 @@ input, select {
                 <div class="data-point"><span>Humidité Relative</span><span id="humidity-perc">N/A</span></div>
                 <div class="data-point"><span>Densité de l'air</span><span id="air-density">1.225 kg/m³</span></div>
                 <div class="data-point"><span>Point de Rosée</span><span id="dew-point">N/A</span></div>
+                <div class="data-point"><span>Gradient Thermique</span><span id="temp-gradient">0.0°C/km</span></div>
+                <div class="data-point"><span>Source Pression</span><span id="filter-status">Initialisation...</span></div>
                 <hr>
                 <h3>Bio/SVT </h3>
                 <div class="data-point"><span>Humidité Absolue </span><span id="abs-humidity">N/A</span></div>
