--- a/index.html
+++ b/index.html
@@ -623,11 +623,12 @@ input, select {
              </section>
         </main>
                     
-     <script src="vendor/math.min.js"></script> 
-    <script src="vendor/leaflet.js"></script> 
-    <script src="lib/ephem.js"></script> 
-    <script src="lib/ukf-lib.js"></script> 
-    <script src="gnss-dashboard-full.js"></script>
+<script src="vendor/math.min.js"></script>
+<script src="vendor/turf.min.js"></script>
+<script src="lib/ephem.js"></script>
+<script src="lib/astro.js"></script>
+<script src="lib/ukf-lib.js"></script>
+<script src="gnss-dashboard-full.js"></script>/script>
                     
 </body>
 </html>
