--- a/index.html
+++ b/index.html
@@ -594,6 +594,9 @@ input, select {
                 <div class="data-point"><span>Altitude Corrigée (Baro)</span><span id="alt-corrected-baro">N/A</span></div>
                 <div class="data-point"><span>Cap (Direction)</span><span id="heading-display">N/A</span></div>
                 <hr>
+                <div class="astro-visual-container">
+    <canvas id="mc-clock-canvas" width="120" height="120"></canvas>
+                </div>
                 <h3>Temps Solaire & Sidéral</h3>
                 <div class="data-point"><span>Date (Astro)</span><span id="date-display-astro">N/A</span></div>
                 <div class="data-point"><span>Date Solaire Moyenne</span><span id="date-solar-mean">N/A</span></div>
